# xoshiro256

./: .editorconfig  .gitignore  Cargo.toml  Justfile  LICENSE  README.md  expected.txt  index.d.ts  index.mjs  package-lock.json  package.json
examples/: js-impl.mjs  native.rs  nodejs.mjs
src/: lib.rs  splitmix64.rs  xoshiro256.rs
