[package]
name = "xoshiro256"
version = "0.1.0"
authors = ["Sami Kukkonen <sami@samikukkonen.fi>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
lto = true
opt-level = "z"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# wasm-bindgen = "0.2.58"